# portfolio

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  manage.py  noxfile.py  portfolio.Dockerfile  portfolio.dockerignore  pyproject.toml
algorithms/: utils.py
algorithms/pathfinding/: __init__.py  a_star.py  bfs.py  djikstra.py  utils.py
algorithms/simulation/: car.py  estimators.py  utils.py
docker/nginx/: nginx.conf
portfolio/: settings.py  urls.py
projects/: __init__.py  graph_loading.py  urls.py  utils.py  views.py
projects/static/projects/: kalman.js  main.css  map.js  shared-utils.js
projects/static/projects/kalman/: constants.js  simulation.js  state.js  ui.js
projects/static/projects/map/: constants.js  layers.js  simulation.js  state.js  ui.js
projects/templates/projects/: kalman.html  map.html
