[project]
name = "portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cachetools>=7.0.5",
    "django>=5.2.12",
    "gunicorn>=25.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "osmnx>=2.0.7",
    "plotly>=6.6.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
dev = [
    "nox",
    "ruff",
    "mypy",
    "pytest",
    "dotenv-cli",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_untyped_imports = true
